# frozen-bubble-sdl2

./: CMakeLists.desktop.txt  CMakeLists.txt  CMakeLists.wii.txt  WII_README.md
cmake/: elf2dol.py  toolchain-wii.cmake  wii.ld
inc/: audiomixer_ogc.h  iniparser.h  sdl_image_ogc.h  sdl_ogc_impl.h  sdl_ogc_shim.h  tiny_png.h  wii_input.h
inc/SDL2/: SDL_ttf.h
share/gfx/: attack_rp1.png.rgba  attack_rp2.png.rgba  attack_rp3.png.rgba  attack_rp4.png.rgba  attackme_rp2.png.rgba  attackme_rp3.png.rgba  attackme_rp4.png.rgba  back_hiscores.png.rgba  back_multiplayer.png.rgba  back_netgame.png.rgba  back_one_player.png.rgba  back_paused.png.rgba  backgrnd.png.rgba  banane-mini.png.rgba  banane.png.rgba  compressor_ext.png.rgba  compressor_main.png.rgba  dot_green.png.rgba  dot_red.png.rgba  file_list_background.png.rgba  font-hi.png.rgba  font.png.rgba  font2.png.rgba  hiscore-levelset.png.rgba  hiscore-mptraining.png.rgba  hiscore_frame.png.rgba  hover.gif.rgba  hurry_p1.png.rgba  hurry_p2.png.rgba  hurry_rp1.png.rgba  hurry_rp2.png.rgba  hurry_rp3.png.rgba  hurry_rp4.png.rgba  key_shortcuts.png.rgba  left-rp1-mini.png.rgba  left-rp1.png.rgba  left-rp2-mini.png.rgba  left-rp3-mini.png.rgba  left-rp4-mini.png.rgba  level_editor.png.rgba  (+88 more)
share/gfx/balls/: bubble-1-mini.png.rgba  bubble-1.gif.rgba  bubble-2-mini.png.rgba  bubble-2.gif.rgba  bubble-3-mini.png.rgba  bubble-3.gif.rgba  bubble-4-mini.png.rgba  bubble-4.gif.rgba  bubble-5-mini.png.rgba  bubble-5.gif.rgba  bubble-6-mini.png.rgba  bubble-6.gif.rgba  bubble-7-mini.png.rgba  bubble-7.gif.rgba  bubble-8-mini.png.rgba  bubble-8.gif.rgba  bubble-colourblind-1-mini.png.rgba  bubble-colourblind-1.gif.rgba  bubble-colourblind-2-mini.png.rgba  bubble-colourblind-2.gif.rgba  bubble-colourblind-3-mini.png.rgba  bubble-colourblind-3.gif.rgba  bubble-colourblind-4-mini.png.rgba  bubble-colourblind-4.gif.rgba  bubble-colourblind-5-mini.png.rgba  (+26 more)
share/icons/: frozen-bubble-icon-16x16.png.rgba  frozen-bubble-icon-32x32.png.rgba  frozen-bubble-icon-64x64.png.rgba
src/: audiomixer.cpp  audiomixer.h  audiomixer_wii.cpp  bubblegame.cpp  bubblegame.h  frozenbubble.cpp  gamesettings.cpp  gamesettings.h  highscoremanager.cpp  iniparser_stub.cpp  main_wii.cpp  mainmenu.cpp  mainmenu.h  sdl_ogc_impl.cpp  shaderstuff.cpp  test_wii.c  transitionmanager.cpp  wii_input.cpp
(+2975 files in other folders)
